Fix Fortnum case study header image on IE11

--- a/site/components/picture/style.css
+++ b/site/components/picture/style.css
@@ -1,7 +1,7 @@
+
 .picture {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  width: 100%;
+  position: relative;
 }
 
 .img {
