--- a/site/pages/our-work/case-study/fortnum-and-mason/style.css
+++ b/site/pages/our-work/case-study/fortnum-and-mason/style.css
@@ -18,6 +18,9 @@
 
 .header__image {
   max-width: 100%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .content {
